tests/snapshots/dbc-cantools/BU_BO_REL_Message.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - ECU1
  - ECU2
messages:
  - id:
      Standard: 1
    name: message_1
    size: 7
    transmitter: ECU1
    signals:
      - name: signal_1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 100
        unit: ""
        receivers:
          - ECU2
attribute_definitions:
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
relation_attribute_definitions:
  - Message:
      - MsgProject
      - Enum:
          - A
          - B
          - C
attribute_defaults:
  - name: GenMsgCycleTime
    value:
      Uint: 0
relation_attribute_defaults:
  - name: MsgProject
    value:
      String: A
relation_attribute_values:
  - name: MsgProject
    details:
      NodeToMessage:
        node_name: ECU1
        message_id:
          Standard: 1
        value:
          Uint: 2
value_descriptions:
  - Signal:
      message_id:
        Standard: 1
      name: signal_1
      value_descriptions:
        - id: 255
          description: Invalid
