tests/snapshots/dbc-cantools/attributes.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - TheNode
messages:
  - id:
      Extended: 57
    name: TheMessage
    size: 8
    transmitter: ~
    signals:
      - name: TheSignal
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
  - id:
      Standard: 42
    name: TheOtherMessage
    size: 8
    transmitter: ~
    signals:
      - name: TheSignal
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
comments:
  - Node:
      name: TheNode
      comment: TheNodeComment
attribute_definitions:
  - Signal:
      - TheSignalStringAttribute
      - String
  - Plain:
      - TheNetworkAttribute
      - Int:
          - Uint: 0
          - Uint: 100
  - Message:
      - TheUnusedAttributeDefinitionWithoutDefault
      - Hex:
          - Uint: 0
          - Uint: 8
  - Message:
      - TheHexAttribute
      - Hex:
          - Uint: 0
          - Uint: 8
  - Message:
      - TheFloatAttribute
      - Float:
          - Uint: 5
          - Uint: 87
  - Node:
      - TheNodeAttribute
      - Int:
          - Uint: 50
          - Uint: 150
  - Node:
      - NodeLayerModules
      - String
  - Message:
      - GenMsgStartDelayTime
      - Int:
          - Uint: 0
          - Uint: 65535
  - Signal:
      - NWM-WakeupAllowed
      - Enum:
          - "No"
          - "Yes"
  - Message:
      - NmMessage
      - Enum:
          - "no"
          - "yes"
  - Message:
      - GenMsgILSupport
      - Enum:
          - "No"
          - "Yes"
  - Node:
      - NmNode
      - Enum:
          - "no"
          - "yes"
  - Node:
      - NmStationAddress
      - Int:
          - Uint: 0
          - Uint: 63
  - Plain:
      - NmBaseAddress
      - Hex:
          - Uint: 1024
          - Uint: 1087
  - Message:
      - GenMsgCycleTimeFast
      - Int:
          - Uint: 0
          - Uint: 50000
  - Plain:
      - BusType
      - String
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 50000
  - Message:
      - GenMsgDelayTime
      - Int:
          - Uint: 0
          - Uint: 1000
  - Message:
      - GenMsgNrOfRepetition
      - Int:
          - Uint: 0
          - Uint: 999999
  - Message:
      - GenMsgSendType
      - Enum:
          - Cyclic
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - IfActive
          - NoMsgSendType
          - NotUsed
          - vector_leerstring
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 100000
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
  - Signal:
      - GenSigStartValue
      - Float:
          - Uint: 0
          - Uint: 100000000000
attribute_defaults:
  - name: TheSignalStringAttribute
    value:
      String: "100"
  - name: TheNetworkAttribute
    value:
      Uint: 50
  - name: TheHexAttribute
    value:
      Uint: 4
  - name: TheFloatAttribute
    value:
      Uint: 55
  - name: TheNodeAttribute
    value:
      Uint: 100
  - name: NodeLayerModules
    value:
      String: CANoeILNLVector.dll
  - name: GenMsgStartDelayTime
    value:
      Uint: 0
  - name: NWM-WakeupAllowed
    value:
      String: ""
  - name: NmMessage
    value:
      String: "no"
  - name: GenMsgILSupport
    value:
      String: "Yes"
  - name: NmNode
    value:
      String: "no"
  - name: NmStationAddress
    value:
      Uint: 0
  - name: NmBaseAddress
    value:
      Uint: 1024
  - name: GenMsgCycleTimeFast
    value:
      Uint: 0
  - name: BusType
    value:
      String: ""
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: GenMsgDelayTime
    value:
      Uint: 0
  - name: GenMsgNrOfRepetition
    value:
      Uint: 0
  - name: GenMsgSendType
    value:
      String: NoMsgSendType
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenSigSendType
    value:
      String: Cyclic
  - name: GenSigStartValue
    value:
      Uint: 0
attribute_values_database:
  - name: TheNetworkAttribute
    value:
      Uint: 51
  - name: BusType
    value:
      String: CAN
attribute_values_node:
  - name: TheNodeAttribute
    node_name: TheNode
    value:
      Uint: 99
attribute_values_message:
  - name: TheFloatAttribute
    message_id:
      Extended: 57
    value:
      Double: 58.7
  - name: TheHexAttribute
    message_id:
      Extended: 57
    value:
      Uint: 5
  - name: GenMsgSendType
    message_id:
      Extended: 57
    value:
      Uint: 0
  - name: GenMsgCycleTime
    message_id:
      Extended: 57
    value:
      Uint: 1000
attribute_values_signal:
  - name: TheSignalStringAttribute
    message_id:
      Extended: 57
    signal_name: TheSignal
    value:
      String: TestString
  - name: GenSigSendType
    message_id:
      Extended: 57
    signal_name: TheSignal
    value:
      Uint: 1
  - name: GenSigSendType
    message_id:
      Standard: 42
    signal_name: TheSignal
    value:
      Uint: 1
