tests/snapshots/dbc-cantools/attributes_relation.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - ECU2
  - ECU1
messages:
  - id:
      Standard: 83
    name: Message_2
    size: 8
    transmitter: ECU2
    signals:
      - name: signal_2
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - ECU1
  - id:
      Standard: 82
    name: Message_1
    size: 8
    transmitter: ECU1
    signals:
      - name: signal_1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
        receivers:
          - ECU2
comments:
  - Node:
      name: ECU1
      comment: First ECU
attribute_definitions:
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 65535
  - Message:
      - MsgProject
      - Enum:
          - A
          - B
          - C
  - Plain:
      - BusType
      - String
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
relation_attribute_definitions:
  - Signal:
      - SigFirstTimeoutTime
      - Int:
          - Uint: 0
          - Uint: 65535
  - Signal:
      - SigTimeoutTime
      - Int:
          - Uint: 0
          - Uint: 65535
attribute_defaults:
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: MsgProject
    value:
      String: A
  - name: BusType
    value:
      String: ""
  - name: GenMsgCycleTime
    value:
      Uint: 0
relation_attribute_defaults:
  - name: SigFirstTimeoutTime
    value:
      Uint: 0
  - name: SigTimeoutTime
    value:
      Uint: 0
relation_attribute_values:
  - name: SigTimeoutTime
    details:
      NodeToSignal:
        node_name: ECU2
        message_id:
          Standard: 82
        signal_name: signal_1
        value:
          Uint: 6000
  - name: SigFirstTimeoutTime
    details:
      NodeToSignal:
        node_name: ECU2
        message_id:
          Standard: 82
        signal_name: signal_1
        value:
          Uint: 24000
attribute_values_database:
  - name: BusType
    value:
      String: CAN
attribute_values_message:
  - name: GenMsgCycleTime
    message_id:
      Standard: 83
    value:
      Uint: 50
