tests/snapshots/dbc-cantools/bus_comment.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
messages:
  - id:
      Extended: 1193046
    name: Message1
    size: 8
    transmitter: ~
    signals:
      - name: BIT_F
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 39
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_H
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 38
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_B
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 33
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_D
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 32
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_E
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 29
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_K
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 28
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_A
        multiplexer_indicator:
          MultiplexedSignal: 24
        start_bit: 26
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_L
        multiplexer_indicator:
          MultiplexedSignal: 8
        start_bit: 24
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_G
        multiplexer_indicator:
          MultiplexedSignal: 8
        start_bit: 23
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_C
        multiplexer_indicator:
          MultiplexedSignal: 8
        start_bit: 19
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: BIT_J
        multiplexer_indicator:
          MultiplexedSignal: 8
        start_bit: 18
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
      - name: Multiplexor
        multiplexer_indicator: Multiplexor
        start_bit: 2
        size: 6
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
comments:
  - Plain:
      comment: SpecialRelease
  - Signal:
      message_id:
        Extended: 1193046
      name: Multiplexor
      comment: Defines data content for response messages.
attribute_definitions:
  - Message:
      - VFrameFormat
      - Enum:
          - StandardCAN
          - ExtendedCAN
          - reserved
          - J1939PG
  - Signal:
      - GenSigSendType
      - Enum:
          - Cyclic
          - OnWrite
          - OnWriteWithRepetition
          - OnChange
          - OnChangeWithRepetition
          - IfActive
          - IfActiveWithRepetition
          - NoSigSendType
  - Signal:
      - GenSigInactiveValue
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 0
  - Message:
      - GenMsgSendType
      - Enum:
          - Cyclic
          - not_used
          - not_used
          - not_used
          - not_used
          - Cyclic
          - not_used
          - IfActive
          - NoMsgSendType
  - Node:
      - NmStationAddress
      - Hex:
          - Uint: 0
          - Uint: 0
  - Plain:
      - DBName
      - String
  - Plain:
      - BusType
      - String
attribute_defaults:
  - name: VFrameFormat
    value:
      String: J1939PG
  - name: GenSigSendType
    value:
      String: Cyclic
  - name: GenSigInactiveValue
    value:
      Uint: 0
  - name: GenMsgCycleTime
    value:
      Uint: 0
  - name: GenMsgSendType
    value:
      String: NoMsgSendType
  - name: NmStationAddress
    value:
      Uint: 0
  - name: DBName
    value:
      String: ""
  - name: BusType
    value:
      String: CAN
attribute_values_database:
  - name: BusType
    value:
      String: CAN
  - name: DBName
    value:
      String: Network_A
attribute_values_message:
  - name: VFrameFormat
    message_id:
      Extended: 1193046
    value:
      Uint: 3
extended_multiplex:
  - message_id:
      Extended: 1193046
    signal_name: BIT_J
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 8
        max_value: 8
      - min_value: 16
        max_value: 16
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_C
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 8
        max_value: 8
      - min_value: 16
        max_value: 16
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_G
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 8
        max_value: 8
      - min_value: 16
        max_value: 16
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_L
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 8
        max_value: 8
      - min_value: 16
        max_value: 16
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_A
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_K
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_E
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_D
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_B
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_H
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
  - message_id:
      Extended: 1193046
    signal_name: BIT_F
    multiplexor_signal_name: Multiplexor
    mappings:
      - min_value: 24
        max_value: 24
